--- a/Belly_Button_Biodiversity/templates/index.html
+++ b/Belly_Button_Biodiversity/templates/index.html
@@ -48,8 +48,8 @@
   <!-- <script src="https://cdn.plot.ly/plotly-1.31.2.min.js"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="{{ url_for('static', filename='js/bonus.js') }}"></script>
-  <script src="{{ url_for('static', filename='js/app.js') }}"></script>
+  <!-- <script src="C:\Users\winst\plotly-challenge\Belly_Button_Biodiversity\static\js\app_1.js"></script> -->
+  <script src="{{ url_for('static', filename='js/app_1.js') }}"></script>
 
 </body>
 
